# luatos-soc-2024

./: .gitignore  CMakeLists.txt  dl_res.js  run.sh
project/example/src/: example_main.c
